# llm-eval

./: .gitignore  README.md  pyproject.toml
examples/: async_llm_grading.py  coding_agent_eval.py  custom_grader_example.py  simple_qa_eval.py  specialized_graders_demo.py
src/llm_eval/: __init__.py
src/llm_eval/core/: __init__.py  suite.py  task.py  transcript.py  trial.py
src/llm_eval/graders/: __init__.py  base.py  code_grader.py  human_grader.py  model_grader.py  specialized_graders.py
src/llm_eval/harness/: __init__.py  base.py  executor.py
src/llm_eval/metrics/: __init__.py  aggregation.py  pass_at_k.py
tests/: test_graders.py  test_harness.py  test_task.py
